--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.24.0",
     "nicescroll": "^3.7.4",
     "owl.carousel": "^2.3.4",
+    "package.json": "^2.0.1",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.14.7",
     "prismjs": "^1.15.0",
@@ -53,7 +54,7 @@
     "autoprefixer": "^9.4.7",
     "browser-sync": "^2.26.3",
     "cssnano": "^4.1.8",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-color": "^0.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^3.4.0",
